--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Hello </title>
+    <title> kys pls | Æ3 </title>
 </head>
 <body>
     <h1> tf is this? </h1>
+    <hr>
+    <h3> do it to yourself </h3>
+    <a href="https://github.com/a3-Prjkt">
+        dont
+    </a>
 </body>
 </html>
