--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <h1> tf is this? </h1>
     <hr>
     <h3> do it to yourself </h3>
-    <a href="https://github.com/a3-Prjkt">
+    <h1>
+        <a href="links.html" title="da links!" target="_blank">
+            Links
+        </a>
+    </h1>
+    <a href="https://github.com/a3-Prjkt" title="github" target="_blank">
         dont
     </a>
 </body>
