--- a/links.html
+++ b/links.html
@@ -6,6 +6,7 @@
     <title> Links | Æ3 </title>
 </head>
 <body>
-    just stfu
+    <h1>just stfu</h1>
+    <img src="repo/Susremaster.webp" height="500" width="1000" title="amogus jumpscare rawr">
 </body>
 </html>
