--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <h1> tf is this? </h1>
     <hr>
     <h3> do it to yourself </h3>
-    <h1>
-        <a href="links.html" title="da links!" target="_blank">
-            Links
-        </a>
-    </h1>
+    <a href="links.html" title="da links!" target="_blank">
+        <h3>Links</h3>
+    </a>
     <a href="https://github.com/a3-Prjkt" title="github" target="_blank">
         dont
+    </a>
+    <a href="test.html" title="test (chatgpt wow)">
+        test by chatgpt
     </a>
 </body>
 </html>
